2020-01-13  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-insn.def (PKL_INSN_OSETM): Define.
	* src/pvm.jitter (osetm): new instruction.
	* src/pkl-gen.c (pkl_gen_ps_op_intexp): Adapt to offsets.
	* src/pkl-asm.c (pkl_asm_insn_intop): Likewise.
	* testsuite/poke.pkl/neg-offsets-1.pk: New test.
	* testsuite/poke.pkl/bnot-offsets-1.pk: Likewise.
	* testsuite/poke.pkl/bnot-integers-1.pk: Renamed from bnot-1.pk
	* testsuite/poke.pkl/bnot-integers-2.pk: Likewise.

2020-01-13  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-typify.c (pkl_typify1_ps_cast): Check casts from arrays.
	* testsuite/poke.pkl/cast-array-diag-8.pk: New file.

2020-01-13  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-fold.c (pkl_fold_cdiv): Fix detection of division by zero
	for offsets with implicit magnitudes.
	(pkl_fold_div): Likewise.
	* testsuite/poke.pkl/cdiv-offsets-3.pk: New file.
	* testsuite/poke.pkl/div-offsets-4.pk: Likewise.

2020-01-13  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-fold.c (pkl_fold_mod): Fix detection of division by zero
	for offsets with implicit magnitudes.
	* testsuite/poke.pkl/mod-offsets-5.pk: New file.

2020-01-13  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-anal.c (pkl_anal1_ps_offset): New handler.
	(pkl_phase_anal1): Add handler.
	* testsuite/poke.pkl/offset-type-diag-3.pk: New test.
	* testsuite/poke.pkl/offsets-diag-2.pk: Likewise.
	* doc/poke.texi (Offset Literals): Document that the unit of
	offsets shall be bigger than 0.

2020-01-13  Jose E. Marchesi  <jemarch@gnu.org>

	* TODO: Several updates.

2020-01-13  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pk-file.c (print_info_file): Use the IO's id as tags.
	(pk_cmd_info_files): Adapt accordingly.
	* testsuite/poke.cmd/file-mode.pk: Adjust accordingly.

2020-01-13  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-lex.l: Ignore form feed characters.
	* testsuite/poke.pkl/formfeedchar.pk: New file.
	* doc/poke.texi (Comments): New chapter.

2020-01-12  Jose E. Marchesi  <jemarch@gnu.org>
