@@ -1,0 +1,3 @@
+/* { dg-do compile } */
+
+defvar a = ~[1,2,3]; /* { dg-error "invalid operand" } */
